# api.yaml
@@ -199,7 +199,7 @@ paths:
             format: uuid
       responses:
         '204':
-          description: holbie deleted
+          description: company deleted
         default:
           description: unexpected error
           content:
@@ -224,6 +224,120 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Company'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+                
+  /experiences:
+    get:
+      description: |
+        Returns all companies
+      operationId: find experiences
+      responses:
+        '200':
+          description: experience response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Experience'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    post:
+      description: Creates a new experience.
+      operationId: addExperience
+      requestBody:
+        description: Experience to add to the app
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Experience'
+      responses:
+        '200':
+          description: company response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Experience'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /experiences/{id}:
+    get:
+      description: Returns a experience based on id
+      operationId: findExperience
+      parameters:
+        - name: id
+          in: path
+          description: ID holbie to fetch
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Holbie response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Experience'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    delete:
+      description: deletes a single experience based on the ID supplied
+      operationId: deleteExperience
+      parameters:
+        - name: id
+          in: path
+          description: ID of pet to delete
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '204':
+          description: company deleted
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    put:
+      description: Update a company based on id
+      operationId: find experience and update
+      parameters:
+        - name: id
+          in: path
+          description: ID company to fetch
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Holbie response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Experience'
         default:
           description: unexpected error
           content:
@@ -282,6 +396,18 @@ components:
         technologies:
           type: string
         contact_link:
+          type: string
+    Experience:
+      required:
+      - name
+      - description
+      - company_name
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        company_name:
           type: string
     Error:
       required:
