# models/holbie.js
@@ -9,8 +9,9 @@ module.exports = (sequelize, DataTypes) => {
      * This method is not a part of Sequelize lifecycle.
      * The `models/index` file will call this method automatically.
      */
-    static associate(models) {
+    static associate({ experience }) {
       // define association here
+      this.hasMany(experience, { foreignKey: 'holbieId', as: 'experiences' })
     }
   };
   holbie.init({
